--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/js": "^5.9.55",
     "core-js": "^3.6.5",
+    "mdi-vue": "^2.2.1",
     "sass-loader": "^10.1.1",
     "vue": "^2.6.11"
   },
